Fixing topic and room overflow. (#400)
* Adding additional help. Fixing the lobby styling for mobile and regular use.

* Updating margins on mobile/desktop and last message to show two lines of text.

* Fixing topic and room overflow.

--- a/assets/styles/default.scss
+++ b/assets/styles/default.scss
@@ -725,7 +725,7 @@ li:not(:last-child) .message.last-read:after {
 .message-caret {
 	content: "";
 	position: absolute;
-	left: 157.5px;
+	left: 157px;
 	top: 8px;
 	width: 0;
 	height: 0;
@@ -1035,6 +1035,7 @@ img.fatality {
 				padding: 8px 8px 30px 8px;
 				border-radius: 4px;
 			  	margin-bottom: 10px;
+			  	overflow: hidden;
 
 			  	&:hover, &:focus {
 				  box-shadow: inset 0px 0px 3px #eee;
@@ -1046,7 +1047,10 @@ img.fatality {
 				}
 
 				.room-topic {
-				  /* no styles */
+				  height: 20px;
+				  overflow: hidden;
+				  white-space: nowrap;
+				  text-overflow: ellipsis;
 				}
 
 			  	.public-room-topic {
